--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -45,12 +45,15 @@
 
       .main-content {
         margin-top: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 70vh;
       }
 
       .form-card {
         width: 100%;
         max-width: 500px;
-        margin: 20px auto;
         padding: 20px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         border-radius: 10px;
