--- a/src/dowload.html
+++ b/src/dowload.html
@@ -47,6 +47,7 @@
             alt="Logo"
           />
         </a>
+        <!-- Barra de pesquisa -->
         <div class="input-group" style="max-width: 700px">
           <input
             type="text"
@@ -56,12 +57,14 @@
             aria-describedby="button-addon2"
           />
           <div class="input-group-append">
+            <!-- Botão de Pesquisar azul -->
             <button class="btn btn-primary" type="button" id="button-addon2">
               Pesquisar
             </button>
+            <!-- Fim do botão de Pesquisar azul -->
           </div>
         </div>
-
+        <!-- Fim da barra de pesquisa -->
         <div class="d-flex">
           <a href="Login.html" class="btn btn-primary m-3">
             <i class="fa-solid fa-arrow-right-from-bracket fa-bounce"></i> Log
@@ -77,6 +80,7 @@
       <div class="row justify-content-center mt-4">
         <div class="col-md-4 mb-4">
           <div class="card border-shadow">
+            <!-- Adicionando a classe personalizada para a borda sombreada -->
             <img
               src="img SOS.jpg"
               class="card-img-top rounded-circle"
@@ -93,6 +97,7 @@
         </div>
         <div class="col-md-4">
           <div class="card border-shadow">
+            <!-- Adicionando a classe personalizada para a borda sombreada -->
             <img
               src="img SOS.jpg"
               class="card-img-top rounded-circle"
