--- a/src/Sobre.html
+++ b/src/Sobre.html
@@ -40,6 +40,7 @@
         width: 100%;
         height: 100%;
       }
+      
     </style>
 
     <title>S.O.S. Pneus</title>
@@ -118,15 +119,17 @@
           </h3>
         </div>
 
-        <iframe
-          width="100%"
-          height="315"
-          src="https://www.youtube.com/embed/NPBhDql9nXA?si=tB104oti8wP28yrT"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        ></iframe>
+        <div class="video-container">
+          <iframe
+            width="100%"
+            height="100%"
+            src="https://www.youtube.com/embed/WII781lWPV4"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+
       </article>
     </section>
     <footer class="bg-dark text-light text-center py-2">
