--- a/src/dowload.html
+++ b/src/dowload.html
@@ -8,30 +8,6 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-      integrity="sha512-...."
-      crossorigin="anonymous"
-    />
-    <style>
-      .border-shadow {
-        border: 1px solid rgba(0, 0, 0, 0.125);
-        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-      }
-
-      body {
-        position: relative;
-        min-height: 100vh;
-        margin-bottom: -100px;
-      }
-
-      footer {
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-      }
-    </style>
   </head>
   <body>
     <header class="bg-dark text-light p-3">
@@ -66,10 +42,9 @@
         </div>
         <!-- Fim da barra de pesquisa -->
         <div class="d-flex">
-          <a href="Login.html" class="btn btn-primary m-3">
-            <i class="fa-solid fa-arrow-right-from-bracket fa-bounce"></i> Log
-            Out
-          </a>
+          <button class="btn btn-primary m-3" type="submit">
+            Configuração
+          </button>
         </div>
       </div>
     </header>
@@ -79,8 +54,7 @@
 
       <div class="row justify-content-center mt-4">
         <div class="col-md-4 mb-4">
-          <div class="card border-shadow">
-            <!-- Adicionando a classe personalizada para a borda sombreada -->
+          <div class="card">
             <img
               src="img SOS.jpg"
               class="card-img-top rounded-circle"
@@ -96,8 +70,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card border-shadow">
-            <!-- Adicionando a classe personalizada para a borda sombreada -->
+          <div class="card">
             <img
               src="img SOS.jpg"
               class="card-img-top rounded-circle"
@@ -115,7 +88,7 @@
       </div>
     </div>
 
-    <footer class="bg-dark text-light text-center py-2">
+    <footer class="bg-dark text-light text-center py-2 mt-auto">
       <p>&copy; 2023 S.O.S. Pneus. Todos os direitos reservados.</p>
     </footer>
 
