--- a/src/cliente.html
+++ b/src/cliente.html
@@ -11,26 +11,120 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+
+    <script
+      src="https://kit.fontawesome.com/dad3ff2ba1.js"
+      crossorigin="anonymous"
+    ></script>
+
     <title>S.O.S. Pneus</title>
+
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        background-color: #f8f9fa;
+      }
+
+      .header {
+        background-color: #343a40;
+        color: #ffffff;
+        padding: 1rem;
+        text-align: center;
+      }
+
+      .logo {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+      }
+
+      .form-select {
+        margin: 20px 0;
+      }
+
+      .results {
+        margin-top: 20px;
+      }
+
+      .square {
+        width: 95%;
+        height: 200px;
+        background-color: #fcfcfc;
+        border: 2px solid #ccc;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+        margin-bottom: 20px;
+      }
+
+      #map {
+        display: none;
+        height: 400px;
+        width: 100%;
+        margin-top: 20px;
+      }
+
+      footer {
+        background-color: #343a40;
+        color: #ffffff;
+        text-align: center;
+        padding: 10px;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+      }
+
+      main {
+        padding-bottom: 60px;
+      }
+
+      .botao {
+        width: 90%;
+        margin: auto;
+      }
+
+      .select-veiculo {
+        width: 100%;
+      }
+
+      @media (min-width: 768px) {
+        .botao {
+          width: 90%;
+          margin: auto;
+        }
+
+        .select-veiculo {
+          width: 90%;
+          margin: auto;
+        }
+      }
+    </style>
   </head>
 
   <body>
     <header class="header">
-      <a href="Index.html">
-        <img src="img SOS.jpg" class="logo" alt="Logo" />
-      </a>
+      <img src="img SOS.jpg" class="logo" alt="Logo" />
       <h1>Home Cliente</h1>
       <button class="btn btn-primary m-3">Histórico</button>
-      <input class="btn btn-primary m-3" type="button" value="Notificações" />
+      <a href="Login.html" class="btn btn-primary m-3">
+        <i class="fa-solid fa-arrow-right-from-bracket fa-bounce"></i> Log Out
+      </a>
     </header>
 
     <main class="container">
       <div class="text-center mb-4">
         <div class="square mx-auto m-3 d-flex flex-column align-items-center">
           <h2>VEÍCULO ATUAL</h2>
-          <div class="botao m-3" style="width: 95%">
-            <select class="form-select" aria-label="Selecione seu Veículo">
+          <div class="botao m-3">
+            <select
+              class="form-select select-veiculo"
+              aria-label="Selecione seu Veículo"
+            >
               <option selected disabled>Selecione seu Veículo</option>
               <option value="carro">Carro</option>
               <option value="moto">Moto</option>
@@ -44,7 +138,11 @@
         <div class="square mx-auto d-flex flex-column align-items-center">
           <h2>BORRACHARIA</h2>
           <div class="form-group">
-            <button type="submit" class="btn btn-primary" id="iniciarBusca">
+            <button
+              type="button"
+              class="btn btn-primary mt-3 botao"
+              onclick="iniciarBusca()"
+            >
               Iniciar Busca
             </button>
           </div>
@@ -52,61 +150,83 @@
       </div>
 
       <div class="text-center">
-        <div class="square mx-auto m-3">
-          <h2>Resultados da Busca:</h2>
-          <ul id="listaResultados"></ul>
-        </div>
+        <div id="map"></div>
       </div>
-
-      <div id="map" style="width: 100%; height: 400px"></div>
     </main>
 
-    <footer class="bg-dark text-light text-center py-3">
+    <footer>
       <p>&copy; 2023 S.O.S. Pneus. Todos os direitos reservados.</p>
     </footer>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=SUA_CHAVE_DE_API&libraries=places"></script>
     <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        document
-          .getElementById("iniciarBusca")
-          .addEventListener("click", buscarBorracharias);
-      });
+      // Recupere o e-mail do localStorage
+      var userEmail = localStorage.getItem("userEmail");
 
-      function buscarBorracharias() {
-        var map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat: -34.397, lng: 150.644 },
-          zoom: 12,
+      // Se o e-mail estiver disponível, exiba a mensagem de boas-vindas
+      if (userEmail) setWelcomeMessage(userEmail);
+
+      function iniciarBusca() {
+        document.getElementById("map").style.display = "block";
+        const center = { lat: -19.91482, lng: -44.0818 };
+        const map = new google.maps.Map(document.getElementById("map"), {
+          zoom: 14,
+          center: center,
         });
 
-        var service = new google.maps.places.PlacesService(map);
-        var request = {
-          location: { lat: -34.397, lng: 150.644 },
-          radius: 10000,
-          type: ["car_repair"],
-        };
+        const cepMarker = new google.maps.Marker({
+          position: center,
+          map: map,
+          title: "Nova Localização",
+          icon: "http://maps.google.com/mapfiles/ms/icons/blue-dot.png",
+        });
 
-        service.nearbySearch(request, function (results, status) {
-          if (status === google.maps.places.PlacesServiceStatus.OK) {
-            var listaResultados = document.getElementById("listaResultados");
-            listaResultados.innerHTML = ""; // Limpa a lista de resultados
+        const borracharias = [
+          {
+            lat: -19.918043760327734,
+            lng: -44.07822721650027,
+            title: "Borracharia 1",
+          },
+          {
+            lat: -19.924365288678963,
+            lng: -44.08767209222495,
+            title: "Borracharia 2",
+          },
+          {
+            lat: -19.908506961009437,
+            lng: -44.07562777776911,
+            title: "Borracharia 3",
+          },
+          {
+            lat: -19.92179831480071,
+            lng: -44.068661468885786,
+            title: "Borracharia 4",
+          },
+          {
+            lat: -19.91611243917804,
+            lng: -44.069784243937164,
+            title: "Borracharia 5",
+          },
+        ];
 
-            for (var i = 0; i < results.length; i++) {
-              var place = results[i];
-              var marker = new google.maps.Marker({
-                map: map,
-                position: place.geometry.location,
-                title: place.name,
-              });
+        borracharias.forEach((borracharia) => {
+          const marker = new google.maps.Marker({
+            position: { lat: borracharia.lat, lng: borracharia.lng },
+            map: map,
+            title: borracharia.title,
+            icon: "http://maps.google.com/mapfiles/ms/icons/red-dot.png",
+          });
 
-              // Adicione o resultado à lista
-              var itemLista = document.createElement("li");
-              itemLista.textContent = place.name;
-              listaResultados.appendChild(itemLista);
-            }
-          }
+          marker.addListener("click", function () {
+            window.location.href =
+              "pre-interacao.html?borracharia=" + borracharia.title;
+          });
         });
       }
     </script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQRoUAz_p1A304EFpZblVlq315hoEt89Q&callback=initMap"
+      async
+      defer
+    ></script>
   </body>
 </html>
